--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "QuizJson2024-Kevin.sln"
+    "dotnet.defaultSolution": "QuizJsonUltimate.sln"
 }
